# oscillations-non-numeric-simulation

./: .gitignore  CMakeLists.txt  CMakePresets.json  animate.cpp  docker-compose.yml  main.cpp  oscillations.cpp  oscillations.h  plot.cpp  shm.json  test_simulation.cpp  vcpkg-configuration.json  vcpkg.json
VisualizationForMac/VisualizationForMac/: ContentView.swift  VisualizationForMacApp.swift
VisualizationForMac/VisualizationForMac.xcodeproj/: project.pbxproj
VisualizationForMac/VisualizationForMac.xcodeproj/project.xcworkspace/xcuserdata/petersondaronchdebem.xcuserdatad/: UserInterfaceState.xcuserstate
VisualizationForMac/VisualizationForMac.xcodeproj/xcshareddata/xcschemes/: VisualizationForMac.xcscheme
VisualizationForMac/VisualizationForMac.xcodeproj/xcuserdata/petersondaronchdebem.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
VisualizationForMac/VisualizationForMac.xcodeproj/xcuserdata/petersondaronchdebem.xcuserdatad/xcschemes/: xcschememanagement.plist
VisualizationForMac/VisualizationForMacTests/: VisualizationForMacTests.swift
VisualizationForMac/VisualizationForMacUITests/: VisualizationForMacUITests.swift  VisualizationForMacUITestsLaunchTests.swift
notebooks/: notes.ipynb
